add duckdb for table management